--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@
 
 header {
   color: antiquewhite;
-  background-color: 1b263b;
+  background-color: navy;
   text-align: center;
 }
 
 body {
-  background-color: 778da9;
+  background-color: lightgray;
 }
 
 footer {
   color: antiquewhite;
-  background-color: 1b263b;
+  background-color: navy;
   height: 150px;
 }
 
@@ -32,7 +32,6 @@ h2 {
 h3 {
   font-family: helvetica;
   line-height: 1px;
-  
 }
 
 /* p, nav */
@@ -49,18 +48,18 @@ nav {
 }
 
 a:link {
-  color:antiquewhite
+  color: antiquewhite;
 }
 
 a:visited {
-  color:black
+  color: black;
 }
 
 /* image, goals */
 .image {
   float: right;
   padding: 15px;
-  height: 200px
+  height: 200px;
 }
 
 .goals {
